--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <a href="http://tanalaw.com/index.html"><div class="text-center">Law</div></a>
                     <p class="text-center" style="margin-top: 100px;">Questions and Comments</p>
                     <p class="text-center">to</p>
-                    <p class="text-center"><a href="mailto: info@grouptana.com">info@GroupTANA.com</a></p>
+                    <p class="text-center"><a href="mailto:jrogers2001@kellogg.northwestern.edu">jrogers2001@kellogg.northwestern.edu</a></p>
                 </div>
 
                 <div class="col-sm-4 dark-bg contact-link-block">
