add favicon, fix style

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>TANA: Transforming Asia North America</title>
 
+    <link rel="icon" type="image/png" href="favicon.ico" />
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/screen.css" rel="stylesheet">
@@ -41,45 +42,64 @@
     </div>
 
     <div class="row">
-        <div class="col-sm-6 col-xs-12" id="tana-intro-container">
-            <h3 class="text-center">TANA</h3>
-            <h4 class="text-center">TRANSFORMING ASIA</h4>
-            <h4 class="text-center">NORTH AMERICA</h4>
+        <div class="col-sm-5 col-xs-12 col-sm-offset-1" id="tana-intro-container">
+            <h3 style="text-indent: 0;">TANA</h3>
+            <h4 style="text-indent: 0">TRANSFORMING ASIA NORTH AMERICA</h4>
 
+            <div class="row" style="height: 20px"></div>
             <p> <b>TANA</b> is the umbrella grouping through which John Rogers organizes his  independent,  yet interrelated,   professional activities.</p>
-            <p>塔纳是通过约翰 · 罗杰斯组织他独立，又相互关联的伞分组、 专业活动。</p>
+            <p>
+                As a long-time attorney and former in-house General Counsel, Rogers works and teaches at the intersection of law and business  especially in the international arena.
+                His skills, acquired over 30 years of legal practice,  enhance seminar and speaking engagements and bring real world experience to both the boardroom and the class room.
+            </p>
+            <p>Rogers’ advise is often sought by companies seeking to execute on international opportunities and understand operations,
+                particularly on issues of corporate governance, finance, and business ethics.</p>
+            <p>He currently resides in Beijing.</p>
 
-            <p>    As a long-time attorney and former in-house General Counsel, Rogers works and teaches at the intersection of law and business  especially in the international arena.  His skills, acquired over 30 years of legal practice,  enhance seminar and speaking engagements and bring real world experience to the class room.</p>
-            <p>作为一个长期的律师和前内部法律总顾问，罗杰斯工程，并教导在法律和商业，特别是在国际舞台上的交集。他的技能，在 30 年的法律实践中，积累提高研讨会和演讲，并把现实世界的经验带到教室里。</p>
-
-            <p>    Rogers’ advise is often sought by companies seeking to understand international operations , particularly on issues of corporate governance, finance, and business ethics.</p>
-            <p>罗杰斯建议经常通过寻求理解国际行动，特别是在公司治理和商业道德问题的公司。</p>
-
-            <p>   He currently resides in Beijing.</p>
-            <p>他目前居住在北京。</p>
+            <p>“塔纳（TANA）”是约翰 · 罗杰斯创立的咨询平台，在这里你可以找到罗杰斯教授提供的相互独立又内在联系的专业服务。</p>
+            <p>作为一个长期执业律师和前企业法律顾问，罗杰斯有着在（尤其是跨国）商业及法律交叉领域服务、教学的丰富经验。三十年的从业经验使他能够在教学、研讨及演讲中游刃有余地贡献他来自一线的经验。</p>
+            <p>
+                罗杰斯先生经常帮助跨国公司解决跨国商业问题；在公司治理、财务、商业合规方面，他更有着独到见解。
+            </p>
+            <p>
+                他目前居住在中国。
+            </p>
         </div>
 
-        <div class="col-sm-6 col-xs-12">
-            <div class="row" style="margin-top: 250px;">
+        <div class="col-md-5 col-sm-6 col-xs-12 col-sm-offset-0 col-md-offset-1">
+            <div class="row" style="margin-top: 100px;">
                 <p class="text-right" style="color: red">Click on box to learn more</p>
             </div>
             <div class="row">
                 <div class="col-sm-4 contact-link-block" style="background-color: #666">
-                    <a href="http://tanaeducation.com/index.html"><div class="text-center">Education</div></a>
+                    <div class="row first-blank-row"></div>
+                    <div class="row">
+                        <a href="http://tanaeducation.com/index.html"><div class="text-center">Education</div></a>
+                    </div>
+                    <div class="row" style="height: 50px"></div>
                 </div>
 
                 <div class="col-sm-4 contact-link-block" style="background: #333;">
-                    <a href="http://tanalaw.com/index.html"><div class="text-center">Law</div></a>
-                    <p class="text-center" style="margin-top: 100px;">Questions and Comments</p>
+                    <div class="row first-blank-row"></div>
+                    <div class="row">
+                        <a href="http://tanalaw.com/index.html"><div class="text-center">Law</div></a>
+                    </div>
+                    <div class="row second-blank-row"></div>
+                    <p class="text-center" style="margin-top: 20px">Questions and Comments</p>
                     <p class="text-center">to</p>
-                    <p class="text-center"><a href="mailto:jrogers2001@kellogg.northwestern.edu">jrogers2001@kellogg.northwestern.edu</a></p>
+                    <p class="text-center" style="padding-bottom: 20px; margin-bottom: 0"><a href="mailto:jrogers2001@kellogg.northwestern.edu">jrogers2001<br/>@kellogg.northwestern.edu</a></p>
                 </div>
 
                 <div class="col-sm-4 dark-bg contact-link-block">
-                    <a href="http://tanastrategy.com/index.html"><div class="text-center">Strategy Consulting</div></a>
+                    <div class="row first-blank-row"></div>
+                    <div class="row">
+                        <a href="http://tanastrategy.com/index.html"><div class="text-center">Strategy Consulting</div></a>
+                    </div>
+                    <div class="row second-blank-row"></div>
                     <div class="avatar-container">
                         <img src="images/john_rogers.png" alt=""/>
                     </div>
+                    <div class="row" style="height: 20px"></div>
                 </div>
             </div>
         </div>
