--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="row">
         <div class="col-sm-8 col-xs-12">
             <div class="logo">
-                <div class="text-right">调整资产与机会</div>
+                <div class="text-right">资产与机会的交汇点</div>
                 <div class="text-right">Aligning Assets and Opportunities</div>
             </div>
             <div class="title">
