--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="row">
         <div class="col-sm-5 col-xs-12 col-sm-offset-1" id="tana-intro-container">
             <h3 style="text-indent: 0;">TANA</h3>
-            <h4 style="text-indent: 0">TRANSFORMING ASIA NORTH AMERICA</h4>
+            <h4 style="text-indent: 0">TRANSFORMING ASIA -<br/>NORTH AMERICA</h4>
 
             <div class="row" style="height: 20px"></div>
             <p> <b>TANA</b> is the umbrella grouping through which John Rogers organizes his  independent,  yet interrelated,   professional activities.</p>
