fixed mailbox and translation

--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
                 particularly on issues of corporate governance, finance, and business ethics.</p>
             <p>He currently resides in Beijing.</p>
 
-            <p>“塔纳（TANA）”是约翰 · 罗杰斯创立的咨询平台，在这里你可以找到罗杰斯教授提供的相互独立又内在联系的专业服务。</p>
-            <p>作为一个长期执业律师和前企业法律顾问，罗杰斯有着在（尤其是跨国）商业及法律交叉领域服务、教学的丰富经验。三十年的从业经验使他能够在教学、研讨及演讲中游刃有余地贡献他来自一线的经验。</p>
+            <!--<h4 style="text-indent: 0">“塔纳”集团介绍</h4>-->
+            <p>“塔纳（TANA）”是约翰 · 罗杰斯（罗约翰）创立的咨询平台，在这里你可以找到罗约翰教授提供的相互独立又有着内在联系的各项专业服务。</p>
+            <p>作为一个长期执业律师和前企业法律顾问，罗约翰有着在（尤其是跨国）商业及法律交叉领域服务和教学的丰富经验。三十年的从业经验使他能够在教学、研讨及演讲中游刃有余地贡献他来自一线的经验。</p>
             <p>
                 罗杰斯先生经常帮助跨国公司解决跨国商业问题；在公司治理、财务、商业合规方面，他更有着独到见解。
             </p>
@@ -86,8 +87,8 @@
                     </div>
                     <div class="row second-blank-row"></div>
                     <p class="text-center" style="margin-top: 20px">Questions and Comments</p>
-                    <p class="text-center">to</p>
-                    <p class="text-center" style="padding-bottom: 20px; margin-bottom: 0"><a href="mailto:jrogers2001@kellogg.northwestern.edu">jrogers2001<br/>@kellogg.northwestern.edu</a></p>
+                    <!--<p class="text-center">to</p>-->
+                    <p class="text-center" style="padding-bottom: 20px; margin-bottom: 0"><a href="mailto:info@grouptana.com">info<br/>@GroupTANA.com</a></p>
                 </div>
 
                 <div class="col-sm-4 dark-bg contact-link-block">
